pom.xmlのreleseオプションを削除した